# lucid_decoders

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: local_laptop_runbook.md  poster_source_document.md  project_history_and_results.md  prompts_used.txt  recovery_changelog.md
scripts/: run_local_50k.ps1  smoke_mbart.py
src/lucid_decoders/: __init__.py  attention.py  cli.py  config.py  data.py  evaluation.py  features.py  io.py  ml.py  modeling.py  pipeline.py  schemas.py  visualization.py
src/lucid_decoders/analysis/: __init__.py  plot_attention.py
src/lucid_decoders/data/: __init__.py  prepare_ende.py  preprocess.py  sample_ende.py  validate_ende.py  wmt.py
src/lucid_decoders/eval/: evaluate_sentence.py  evaluate_token.py
src/lucid_decoders/features/: __init__.py  contracts.py  sentence_features.py  sentence_head_features.py  token_features.py
src/lucid_decoders/models/: __init__.py  mbart_attention.py  mbart_attention_chunked.py
src/lucid_decoders/tools/: __init__.py  colab_recovery.py  kaggle_15k.py  kaggle_20k.py  local_run.py  local_status.py
src/lucid_decoders/train/: train_sentence_classifier.py  train_sentence_head_classifier.py  train_token_classifier.py
tests/: test_colab_recovery.py  test_evaluation.py  test_features.py  test_kaggle_20k.py  test_local_run_recovery.py  test_mbart_attention_chunked.py  test_pipeline.py  test_prepare_ende.py  test_sample_ende.py  test_sentence_head_recovery.py  test_training_smoke.py
