[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lucid-decoders"
version = "0.1.0"
description = "Attention-based hallucination detection for neural machine translation using mBART."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Lucid Decoders" }
]

[project.optional-dependencies]
ml = [
  "datasets>=2.19",
  "joblib>=1.3",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "protobuf>=5",
  "scikit-learn>=1.4",
  "sentencepiece>=0.2",
  "torch>=2.2",
  "transformers>=4.40"
]
dev = [
  "pytest>=8.0"
]

[project.scripts]
lucid-decoders = "lucid_decoders.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
